--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.2.1/journal/bootstrap.min.css" integrity="sha512-vxdma9kK4RsefPULcNEnaOZ67gGw4uWwFtxTHrql96CGI1eWN+LrGEbRPcj33atd+PP2090m8ZwL+WD364mSYQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Raleway:ital,wght@0,500;0,700;1,200&display=swap" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
